# accretionpy

./: .gitignore  README.md  __init__.py  cbd_or_ba.py  pyproject.toml
accretion/: LICENSE  README.md  __init__.py  accretion.py  accretion.rst  initial_conditions.txt  pyproject.toml
accretionpy/: accretion.py  initial_conditions.txt  pyproject.toml  setup.py  test_acirc.py
accretionpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: accretion.doctree  environment.pickle  faq.doctree  figure1.doctree  get_started.doctree  index.doctree  user_input.doctree
docs/_build/html/: .buildinfo  accretion.html  faq.html  figure1.html  genindex.html  get_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  user_input.html
docs/_build/html/_sources/: faq.rst.txt  figure1.rst.txt  get_started.rst.txt  user_input.rst.txt
tests/: test_ideas.txt
