[build-system]
requires = [
    "setuptools", 
    "numpy",
    "cython", 
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "accretionpy"
dynamic = ["version"]
dependencies = [
    "numpy"
]

[tool.setuptools.dynamic]
version = {attr = "accretionpy.__version__"}

[tool.setuptools.packages]
find = {}
